<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/flag_challenge"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFA500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scheduleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/schedule"
            android:layout_marginVertical="20dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hourInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:ems="2"
                android:gravity="center"
                android:hint="@string/hour_hint"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="100dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minuteInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:ems="2"
                android:gravity="center"
                android:hint="@string/minute_hint"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="100dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondInput"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:ems="2"
                android:gravity="center"
                android:hint="@string/seconds_hint"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="100dp" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="Save" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timeSetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="Calender blocked"
            android:textColor="#FF0000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/countdownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</layout>
